Implementa domínio do Sistema Acadêmico com encapsulamento