@@ -1,28 +1,20 @@
+
 package br.edu.sistemaacademico.domain;
 
 public class Disciplina {
-
     private final String codigo;
     private final String nome;
     private final int cargaHoraria;
 
     public Disciplina(String codigo, String nome, int cargaHoraria) {
-        if (codigo == null || codigo.isBlank()) {
-            throw new IllegalArgumentException(
-                    "O código da disciplina não pode ser vazio."
-            );
+        if (codigo == null || codigo.trim().isEmpty()) {
+            throw new IllegalArgumentException("Código da disciplina não pode ser nulo ou vazio.");
         }
-
-        if (nome == null || nome.isBlank()) {
-            throw new IllegalArgumentException(
-                    "O nome da disciplina não pode ser vazio."
-            );
+        if (nome == null || nome.trim().isEmpty()) {
+            throw new IllegalArgumentException("Nome da disciplina não pode ser nulo ou vazio.");
         }
-
         if (cargaHoraria <= 0) {
-            throw new IllegalArgumentException(
-                    "A carga horária deve ser maior que zero."
-            );
+            throw new IllegalArgumentException("Carga horária deve ser positiva.");
         }
 
         this.codigo = codigo;
@@ -30,12 +22,20 @@ public class Disciplina {
         this.cargaHoraria = cargaHoraria;
     }
 
+    public String getCodigo() {
+        return codigo;
+    }
+
+    public String getNome() {
+        return nome;
+    }
+
+    public int getCargaHoraria() {
+        return cargaHoraria;
+    }
+
     @Override
     public String toString() {
-        return "Disciplina{" +
-                "codigo='" + codigo + '\'' +
-                ", nome='" + nome + '\'' +
-                ", cargaHoraria=" + cargaHoraria +
-                '}';
+        return "Disciplina: " + codigo + " - " + nome + " (" + cargaHoraria + "h)";
     }
 }
